--- a/_jobs/2018-09-zoox.md
+++ b/_jobs/2018-09-zoox.md
@@ -9,4 +9,7 @@ key: 2018-09-zoox
 company_name: Zoox Smart Data
 company_img: zoox.jpeg
 company_ref: https://www.linkedin.com/company/zoox-smart-data-brasil/
+short_description:
+    en: I was part of the 3.0 team that focuses on developing the company's newest products, using the most current technologies, such as Vue and Koa.js. The project in which I participated the most was SmartPass, this project focuses on using easy recognition and data enrichment to speed up the filling and generation of the guest file, making it not necessary to enter the normal queue at the hotel, and for the client he has access to create management reports using the captured data.
+    pt: Fiz parte da equipe 3.0 que tem foco em desenvolver os produtos mais novos da empresa, utilizando tecnologias mais atuais, como Vue e Koa.js. O projeto na qual mais participei foi o SmartPass, esse projeto tem foco em utilizar reconhecimento fácil e enriquecimento de dados para agilizar o preenchimento e geração da ficha do hóspede, fazendo com que o mesmo não precise entrar na fila normal do hotel, e para o cliente ele tem acesso a criar relatórios gerenciais utilizando os dados capturados.
 ---
