--- a/_jobs/2018-09-zoox.md
+++ b/_jobs/2018-09-zoox.md
@@ -1,6 +1,7 @@
 ---
 layout: job
 name: Full-stack Developer - Middle
+name_pt: Full-stack Developer - Pleno
 tags: JavaScript,Node.js,VueJavaScript,Angular
 description: "Zoox is a software company focused on Big Data projects and working with the Facial recognition engines. There we use Node.js and Vue stack."
 start_date: "09/2018"
