--- a/_jobs/2018-09-zoox.md
+++ b/_jobs/2018-09-zoox.md
@@ -8,7 +8,7 @@ start_date: "09/2018"
 end_date: "12/2019"
 key: 2018-09-zoox
 company_name: Zoox Smart Data
-company_img: zoox.jpeg
+company_img: zoox.webp
 company_ref: https://www.linkedin.com/company/zoox-smart-data-brasil/
 short_description:
     en: I was part of the 3.0 team that focuses on developing the company's newest products, using the most current technologies, such as Vue and Koa.js. The project in which I participated the most was SmartPass, this project focuses on using easy recognition and data enrichment to speed up the filling and generation of the guest file, making it not necessary to enter the normal queue at the hotel, and for the client he has access to create management reports using the captured data.
