--- a/_posts/2020-07-14-front-end-em-2020.md
+++ b/_posts/2020-07-14-front-end-em-2020.md
@@ -4,6 +4,7 @@ title: Front-end in 2020 - Presentation
 img: /assets/images/posts/front-end-2020.webp
 alt: Front page of the slide, this is a image showcase to the post.
 link: https://github.com/joaomarcuslf/front-end-2020/blob/master/Front-end%20em%202020.pdf
+short_url: http://go-go-url-go.com/etv8P8G4
 tags:
   - Front-end
   - Career
