Add Blog as page

--- a/contents/jobs/2018-09-zoox.md
+++ b/contents/jobs/2018-09-zoox.md
@@ -1,6 +1,4 @@
 ---
-layout: job
-tags: JavaScript,Node.js,VueJavaScript,Angular
 start_date: "09/2018"
 end_date: "12/2019"
 company_name: Zoox Smart Data
@@ -12,4 +10,10 @@ description: "I worked on the company's innovation team, that focuses on develop
 The project in which I was most of the time was SmartPass, this project focuses on using recognition and data enrichment to expedite the completion and generation of the guest web check-in, so that it does not need to enter the normal hotel queue, and for the hotel client, it has access to create management reports using the captured data.
 
 We also used some of AWS services like Elastic Beanstalk, S3, and Rekognition. As additional tools were used Git with Bitbucket and Git-flow, and agile practices such as Scrum and Kanban using Jira."
+tags:
+  - Vue.js
+  - MongoDB
+  - JavaScript
+  - Koa.js
+  - Git
 ---
