--- a/contents/projects/2020-07-08-sabaki-i18n.md
+++ b/contents/projects/2020-07-08-sabaki-i18n.md
@@ -4,6 +4,7 @@ repo: sabaki-i18n
 user: joaomarcuslf
 link: https://github.com/joaomarcuslf/sabaki-i18n
 main: react
+collaborator: true
 techs:
   - React
   - i18n
