Finish resume page

--- a/contents/jobs/2018-09-zoox.md
+++ b/contents/jobs/2018-09-zoox.md
@@ -5,6 +5,7 @@ company_name: Zoox Smart Data
 company_img: zoox.webp
 company_ref: https://www.linkedin.com/company/zoox-smart-data-brasil/
 name: Full-stack Developer - Intermediate
+short_description: "As part of the innovation team, I contributed to developing SmartPass, a Vue/Vuex and Koa.js application that leverages AWS services (Elastic Beanstalk, S3, Rekognition) for guest web check-ins and data-driven hotel management reports. I utilized Git with Bitbucket, Git-flow, and agile methodologies like Scrum and Kanban with Jira to deliver cutting-edge solutions."
 tags:
   - Vue.js
   - MongoDB
