--- a/contents/posts/2020-07-14-front-end-em-2020.md
+++ b/contents/posts/2020-07-14-front-end-em-2020.md
@@ -2,7 +2,7 @@
 layout: post
 title: Front-end in 2020 - Presentation
 img: /images/posts/front-end-2020.webp
-alt: Front page of the slide, this is a image showcase to the post.
+alt: This image is the first page of a slide showing some Front-end tech logos, and the title is "Front-end Development in 2020" written in portuguese.
 link: https://github.com/joaomarcuslf/front-end-2020/blob/master/Front-end%20em%202020.pdf
 lang: pt
 tags:
